Sat Nov  8 22:11:23 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/TkReactor_Test.cpp:

	  Fixed a compile error by removing cerr. 

Sun Nov  9 04:08:16 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * bin/fuzz.pl:
          Added extra line feed to the file checks to make them more
          readable.  Fixed synch check to only pick up Synch.h and
          Synch_T.h.

        * */Makfile*:
          Updated dependencies.

        * ACEXML/apps/svcconf/Makefile.ACEXML_XML_Svc_Conf_Parser:
        * ACEXML/common/Makefile.ACEXML:
        * ACEXML/examples/SAXPrint/Makefile.SAXPrint:
        * ACEXML/parser/parser/Makefile.ACEXML_Parser:
        * ACEXML/tests/Makefile.ContentHandler_Test:
        * ACEXML/tests/Makefile.HttpCharStream_Test:
        * ACEXML/tests/Makefile.NamespaceSupport_Test:
        * ACEXML/tests/Makefile.Transcoder_Test:
          Removed DEPENDENCY_FILE variable and updated dependencies.

        * tests/Makefile.libs:
          Added depend target to get the other makefiles to update depends.

        * tests/Makefile.Service_Config_DLL:
        * tests/Makefile.DLL_Test:
        * tests/Makefile.Framework_Component_DLL:
        * tests/Makefile.Test_Output:
          Added MAKEFILE variable so depend would update dependencies,
          then updated them.

        * ace/Synch.cpp:
        * ace/Synch.h:
        * ace/Synch_T.cpp:
        * ace/Synch_T.h:
          Added FUZZ: disable check_for_synch_include.

        * apps/JAWS2/HTTP_10_Request.cpp:
          Added #include OS_NS_pwd.h.

        * apps/JAWS2/JAWS/Headers.cpp:
        * apps/JAWS2/JAWS/Parse_Headers.cpp:
        * examples/QOS/Simple/Receiver_QoS_Event_Handler.cpp:
        * examples/QOS/Simple/Sender_QoS_Event_Handler.cpp:
        * performance-tests/Synch-Benchmarks/Perf_Test/Performance_Test_Options.cpp:
          Added #include OS_NS_string.h.

        * performance-tests/Synch-Benchmarks/Base_Test/Baseline_Test.h: